--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -320,7 +320,7 @@ fairs:
       order: 15
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ AYDINLATMA VE BİNA OTOMASYON FUARI
-      sector: Elektrik, Enerji ve Aydınlatma
+      sector: Yapı ve İnşaat
       hide_dates: false
       location_tr: MOSKOVA, RUSYA
       start_date: 2026-06-08
