--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -552,21 +552,43 @@ fairs:
       logo: /images/logo-interlight.png
       background_image: /images/gorsel-interlight.jpg
   - basic_info:
-      description_tr: ULUSLARARASI YAPI, İNŞAAT MALZEMELERİ VE TEKNOLOJİLERİ FUARI
-      sector: Yapı ve İnşaat
+      description_tr: ULUSLARARASI ELEKTRİK, ENERJİ, AYDINLATMA VE YENİLENEBİLİR ENERJİ FUARI
+      sector: Elektrik, Enerji ve Aydınlatma
       hide_dates: false
-      location_tr: SUUDI ARABISTAN / RIYAD
-      start_date: 2026-11-02
-      description_en: INTERNATIONAL CONSTRUCTION, BUILDING MATERIALS AND TECHNOLOGIES FAIR
-      end_date: 2026-11-05
-      name_tr: SAUDI BUILD
-      location_en: SAUDI ARABIA / RIYADH
-      name_en: SAUDI BUILD
+      location_tr: SUUDİ ARABİSTAN
+      start_date: 2026-11-16
+      description_en: INTERNATIONAL ELECTRICITY, ENERGY, LIGHTING AND RENEWABLE ENERGY FAIR
+      end_date: 2026-11-19
+      name_tr: SAUDI ELENEX
+      location_en: SAUDI ARABIA
+      name_en: SAUDI ELENEX
     representative:
       hide_phone: false
       team_member: Pınar Yalçın
     settings:
       order: 25
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    visuals:
+      logo: /images/ekran-resmi-2026-02-18-16.35.44.png
+      background_image: /images/ex-1-1.jpg
+  - basic_info:
+      description_tr: ULUSLARARASI YAPI, İNŞAAT MALZEMELERİ VE TEKNOLOJİLERİ FUARI
+      sector: Yapı ve İnşaat
+      hide_dates: false
+      location_tr: RİYAD / SUUDİ ARABİSTAN
+      start_date: 2026-11-02
+      description_en: INTERNATIONAL CONSTRUCTION, BUILDING MATERIALS AND TECHNOLOGIES FAIR
+      end_date: 2026-11-05
+      name_tr: SAUDI BUILD
+      location_en: RIYADH / SAUDI ARABIA
+      name_en: SAUDI BUILD
+    representative:
+      hide_phone: false
+      team_member: Pınar Yalçın
+    settings:
+      order: 26
       show_in_slider: false
       show_in_forms: true
       show_in_chronology: false
@@ -599,7 +621,7 @@ fairs:
       hide_phone: true
       team_member: Ahmet Hilmi Çoruk
     settings:
-      order: 27
+      order: 28
       show_in_slider: false
       show_in_forms: true
       show_in_chronology: false
