--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -555,12 +555,12 @@ fairs:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ, AYDINLATMA VE YENİLENEBİLİR ENERJİ FUARI
       sector: Elektrik, Enerji ve Aydınlatma
       hide_dates: false
-      location_tr: SUUDİ ARABİSTAN
+      location_tr: RİYAD, SUUDİ ARABİSTAN
       start_date: 2026-11-16
       description_en: INTERNATIONAL ELECTRICITY, ENERGY, LIGHTING AND RENEWABLE ENERGY FAIR
       end_date: 2026-11-19
       name_tr: SAUDI ELENEX
-      location_en: SAUDI ARABIA
+      location_en: RIYADH, SAUDI ARABIA
       name_en: SAUDI ELENEX
     representative:
       hide_phone: false
